# minecraft-bedrock-finder

./: .gitignore  Cargo.toml  README.md  TODO.md  TODO.txt  bugs.md  gpu_plan.md  reminder.txt
backup/: Cargo.toml
backup/src/: core.rs  gui.rs  main.rs
src/: core.rs  gpu.rs  gui.rs  main.rs  search.wgsl  search.wgsl.bak
